--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 'hello Europe'
-<button class="button" onclick='https://gisjohann.github.io/Test/'>Buzz off</button>
+
+<a href="https://gisjohann.github.io/TravelMap/">Take me to the Travel Map!</a>
+<a href="https://gisjohann.github.io/Test/">My testing interface</a>
